# marketing-spark

./: .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
backend/: alembic.ini  requirements.txt
backend/ai-generation-service/: Dockerfile
backend/ai-generation-service/app/: __init__.py  main.py
backend/ai-generation-service/tests/: test_suggestions.py
backend/alembic/: env.py
backend/alembic/versions/: 20260216_0001_init.py
backend/asset-service/: Dockerfile
backend/asset-service/app/: __init__.py  main.py
backend/auth-service/: Dockerfile
backend/auth-service/app/: __init__.py  main.py
backend/auth-service/tests/: test_health.py
backend/billing-service/: Dockerfile
backend/billing-service/app/: __init__.py  main.py
backend/campaign-service/: Dockerfile
backend/campaign-service/app/: __init__.py  main.py
backend/common/: pyproject.toml
backend/common/common/: __init__.py
backend/common/common/core/: logging.py  security.py  settings.py
backend/common/common/db/: session.py
backend/common/common/models/: __init__.py  entities.py
backend/common/common/schemas/: common.py
backend/common/common/utils/: credits.py  deps.py  rate_limit.py
deploy/: render.yaml  run-local.ps1
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/components/: top-nav.tsx
frontend/lib/: api.ts  config.ts
frontend/styles/: globals.css
src/: App.tsx  index.css
(+11 files in other folders)
